[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/World.gd" type="Script" id=1]
[ext_resource path="res://objects/Stars/star1.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Stars/star2.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Stars/star3.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Stars/star4.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 487, 385 )
smoothing_enabled = false

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 76, 367 )
color = Color( 0.905882, 0.141176, 0.0823529, 1 )

[node name="star1" parent="." instance=ExtResource( 2 )]
position = Vector2( 1816, -232 )
mass = 1000.0
initial_velocity = Vector2( -500, 0 )
color = Color( 0.560784, 0.890196, 1, 1 )

[node name="star2" parent="." instance=ExtResource( 3 )]
position = Vector2( 764, 466 )
mass = 1000.0
initial_velocity = Vector2( -100, -100 )
color = Color( 0.94902, 0.486275, 0.843137, 1 )

[node name="star3" parent="." instance=ExtResource( 4 )]
position = Vector2( -509, -93 )
mass = 1000.0
initial_velocity = Vector2( 100, 200 )
color = Color( 1, 0.95, 0.5, 1 )

[node name="star4" parent="." instance=ExtResource( 5 )]
position = Vector2( -516, 922 )
mass = 1000.0
initial_velocity = Vector2( 0, 100 )
initial_rotation = 5.0
color = Color( 0.501961, 1, 0.501961, 1 )

[connection signal="time_scale_changed" from="HUD" to="." method="_on_HUD_time_scale_changed"]
[connection signal="toggle_forces" from="HUD" to="." method="_on_HUD_toggle_forces"]
[connection signal="toggle_paths" from="HUD" to="." method="_on_HUD_toggle_paths"]
[connection signal="toggle_speeds" from="HUD" to="." method="_on_HUD_toggle_speeds"]
